// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabs/> renders correctly if change tab 1`] = `
<div
  className="TabsWrapperStyled__TabsWrapperStyled-kxWKwf kQdeyK"
>
  <div
    className="TabsContentWrapperStyled__TabsContentWrapperStyled-fmMkZg HDXly"
  >
    <div
      className="TabsListStyled__TabsListStyled-jltvsP iRzhNT"
    >
      <div
        className="TabStyled__TabStyled-kKgjJZ jfjewJ"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabIconStyled__TabIconStyled-hvQHiJ fUMIYU"
              selected={true}
              type="svg"
            >
              <div
                className="IconSvgStyled__IconSvgStyled-iCtyLo hlSHcB"
                color=""
                rotate={0}
                size="normal"
                type="svg"
              >
                <svg
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19,5.5c0-0.1,0-0.1,0-0.2c-0.1-0.1-0.1-0.2-0.3-0.3c-0.1,0-0.1,0-0.2,0h-10C8.4,5,8.4,5,8.3,5c-0.1,0-0.1,0.1-0.2,0.1l-3,3 c0,0-0.1,0.1-0.1,0.2c0,0.1,0,0.1,0,0.2v10C5,18.8,5.2,19,5.5,19h10c0.1,0,0.1,0,0.2,0c0.1,0,0.1-0.1,0.2-0.1l3-3 c0,0,0.1-0.1,0.1-0.2c0-0.1,0-0.1,0-0.2V5.5z M16,16h1.3L16,17.3V16z M18,15h-2V8.7l2-2V15z M9,9h6v6H9V9z M8,8H6.7L8,6.7V8z M9,6 h8.3l-2,2H9V6z M6,9h2v6.5C8,15.8,8.2,16,8.5,16H15v2H6V9z"
                  />
                </svg>
              </div>
            </div>
            <div
              className="TabTextStyled__TabTextStyled-jbYAge hCrmvf"
            >
              Test 1
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled__TabStyled-kKgjJZ jFBgwR"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabIconStyled__TabIconStyled-hvQHiJ kYPJWE"
              selected={false}
              type="svg"
            >
              <div
                className="IconSvgStyled__IconSvgStyled-iCtyLo hlSHcB"
                color=""
                rotate={0}
                size="normal"
                type="svg"
              >
                <svg
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19,5.5c0-0.1,0-0.1,0-0.2c-0.1-0.1-0.1-0.2-0.3-0.3c-0.1,0-0.1,0-0.2,0h-10C8.4,5,8.4,5,8.3,5c-0.1,0-0.1,0.1-0.2,0.1l-3,3 c0,0-0.1,0.1-0.1,0.2c0,0.1,0,0.1,0,0.2v10C5,18.8,5.2,19,5.5,19h10c0.1,0,0.1,0,0.2,0c0.1,0,0.1-0.1,0.2-0.1l3-3 c0,0,0.1-0.1,0.1-0.2c0-0.1,0-0.1,0-0.2V5.5z M16,16h1.3L16,17.3V16z M18,15h-2V8.7l2-2V15z M9,9h6v6H9V9z M8,8H6.7L8,6.7V8z M9,6 h8.3l-2,2H9V6z M6,9h2v6.5C8,15.8,8.2,16,8.5,16H15v2H6V9z"
                  />
                </svg>
              </div>
            </div>
            <div
              className="TabTextStyled__TabTextStyled-jbYAge hCrmvf"
            >
              Test 2
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if change tab 2`] = `
<div
  className="TabsWrapperStyled__TabsWrapperStyled-kxWKwf kQdeyK"
>
  <div
    className="TabsContentWrapperStyled__TabsContentWrapperStyled-fmMkZg HDXly"
  >
    <div
      className="TabsListStyled__TabsListStyled-jltvsP iRzhNT"
    >
      <div
        className="TabStyled__TabStyled-kKgjJZ jFBgwR"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabIconStyled__TabIconStyled-hvQHiJ kYPJWE"
              selected={false}
              type="svg"
            >
              <div
                className="IconSvgStyled__IconSvgStyled-iCtyLo hlSHcB"
                color=""
                rotate={0}
                size="normal"
                type="svg"
              >
                <svg
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19,5.5c0-0.1,0-0.1,0-0.2c-0.1-0.1-0.1-0.2-0.3-0.3c-0.1,0-0.1,0-0.2,0h-10C8.4,5,8.4,5,8.3,5c-0.1,0-0.1,0.1-0.2,0.1l-3,3 c0,0-0.1,0.1-0.1,0.2c0,0.1,0,0.1,0,0.2v10C5,18.8,5.2,19,5.5,19h10c0.1,0,0.1,0,0.2,0c0.1,0,0.1-0.1,0.2-0.1l3-3 c0,0,0.1-0.1,0.1-0.2c0-0.1,0-0.1,0-0.2V5.5z M16,16h1.3L16,17.3V16z M18,15h-2V8.7l2-2V15z M9,9h6v6H9V9z M8,8H6.7L8,6.7V8z M9,6 h8.3l-2,2H9V6z M6,9h2v6.5C8,15.8,8.2,16,8.5,16H15v2H6V9z"
                  />
                </svg>
              </div>
            </div>
            <div
              className="TabTextStyled__TabTextStyled-jbYAge hCrmvf"
            >
              Test 1
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled__TabStyled-kKgjJZ jfjewJ"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabIconStyled__TabIconStyled-hvQHiJ fUMIYU"
              selected={true}
              type="svg"
            >
              <div
                className="IconSvgStyled__IconSvgStyled-iCtyLo hlSHcB"
                color=""
                rotate={0}
                size="normal"
                type="svg"
              >
                <svg
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19,5.5c0-0.1,0-0.1,0-0.2c-0.1-0.1-0.1-0.2-0.3-0.3c-0.1,0-0.1,0-0.2,0h-10C8.4,5,8.4,5,8.3,5c-0.1,0-0.1,0.1-0.2,0.1l-3,3 c0,0-0.1,0.1-0.1,0.2c0,0.1,0,0.1,0,0.2v10C5,18.8,5.2,19,5.5,19h10c0.1,0,0.1,0,0.2,0c0.1,0,0.1-0.1,0.2-0.1l3-3 c0,0,0.1-0.1,0.1-0.2c0-0.1,0-0.1,0-0.2V5.5z M16,16h1.3L16,17.3V16z M18,15h-2V8.7l2-2V15z M9,9h6v6H9V9z M8,8H6.7L8,6.7V8z M9,6 h8.3l-2,2H9V6z M6,9h2v6.5C8,15.8,8.2,16,8.5,16H15v2H6V9z"
                  />
                </svg>
              </div>
            </div>
            <div
              className="TabTextStyled__TabTextStyled-jbYAge hCrmvf"
            >
              Test 2
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop  1`] = `
<div
  className="TabsWrapperStyled__TabsWrapperStyled-kxWKwf kQdeyK"
>
  <div
    className="TabsContentWrapperStyled__TabsContentWrapperStyled-fmMkZg HDXly"
  >
    <div
      className="TabsListStyled__TabsListStyled-jltvsP iRzhNT"
    >
      <a
        href="test1"
        onClick={[Function]}
      >
        <div
          className="TabStyled__TabStyled-kKgjJZ jfjewJ"
          onClick={[Function]}
          selected={true}
        >
          <div
            className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
          >
            <div
              className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
            >
              <div
                className="TabTextStyled__TabTextStyled-jbYAge cybLXN"
              >
                Test1
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        href="test2"
        onClick={[Function]}
      >
        <div
          className="TabStyled__TabStyled-kKgjJZ jFBgwR"
          onClick={[Function]}
          selected={false}
        >
          <div
            className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
          >
            <div
              className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
            >
              <div
                className="TabTextStyled__TabTextStyled-jbYAge cybLXN"
              >
                Test2
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop icon 1`] = `
<div
  className="TabsWrapperStyled__TabsWrapperStyled-kxWKwf kQdeyK"
>
  <div
    className="TabsContentWrapperStyled__TabsContentWrapperStyled-fmMkZg HDXly"
  >
    <div
      className="TabsListStyled__TabsListStyled-jltvsP iRzhNT"
    >
      <div
        className="TabStyled__TabStyled-kKgjJZ jfjewJ"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabIconStyled__TabIconStyled-hvQHiJ fUMIYU"
              selected={true}
              type="svg"
            >
              <div
                className="IconSvgStyled__IconSvgStyled-iCtyLo hlSHcB"
                color=""
                rotate={0}
                size="normal"
                type="svg"
              >
                <svg
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19,5.5c0-0.1,0-0.1,0-0.2c-0.1-0.1-0.1-0.2-0.3-0.3c-0.1,0-0.1,0-0.2,0h-10C8.4,5,8.4,5,8.3,5c-0.1,0-0.1,0.1-0.2,0.1l-3,3 c0,0-0.1,0.1-0.1,0.2c0,0.1,0,0.1,0,0.2v10C5,18.8,5.2,19,5.5,19h10c0.1,0,0.1,0,0.2,0c0.1,0,0.1-0.1,0.2-0.1l3-3 c0,0,0.1-0.1,0.1-0.2c0-0.1,0-0.1,0-0.2V5.5z M16,16h1.3L16,17.3V16z M18,15h-2V8.7l2-2V15z M9,9h6v6H9V9z M8,8H6.7L8,6.7V8z M9,6 h8.3l-2,2H9V6z M6,9h2v6.5C8,15.8,8.2,16,8.5,16H15v2H6V9z"
                  />
                </svg>
              </div>
            </div>
            <div
              className="TabTextStyled__TabTextStyled-jbYAge hCrmvf"
            >
              Test
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop linkComponent passed 1`] = `
<div
  className="TabsWrapperStyled__TabsWrapperStyled-kxWKwf kQdeyK"
>
  <div
    className="TabsContentWrapperStyled__TabsContentWrapperStyled-fmMkZg HDXly"
  >
    <div
      className="TabsListStyled__TabsListStyled-jltvsP iRzhNT"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        <div
          className="TabStyled__TabStyled-kKgjJZ jfjewJ"
          onClick={[Function]}
          selected={true}
        >
          <div
            className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
          >
            <div
              className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
            >
              <div
                className="TabTextStyled__TabTextStyled-jbYAge cybLXN"
              >
                Test
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop selected set 1 1`] = `
<div
  className="TabsWrapperStyled__TabsWrapperStyled-kxWKwf kQdeyK"
>
  <div
    className="TabsContentWrapperStyled__TabsContentWrapperStyled-fmMkZg HDXly"
  >
    <div
      className="TabsListStyled__TabsListStyled-jltvsP iRzhNT"
    >
      <div
        className="TabStyled__TabStyled-kKgjJZ jFBgwR"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabTextStyled__TabTextStyled-jbYAge cybLXN"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled__TabStyled-kKgjJZ jfjewJ"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabTextStyled__TabTextStyled-jbYAge cybLXN"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled__TabStyled-kKgjJZ jFBgwR"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabTextStyled__TabTextStyled-jbYAge cybLXN"
            >
              Test
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop selected set after render 1`] = `
<div
  className="TabsWrapperStyled__TabsWrapperStyled-kxWKwf kQdeyK"
>
  <div
    className="TabsContentWrapperStyled__TabsContentWrapperStyled-fmMkZg HDXly"
  >
    <div
      className="TabsListStyled__TabsListStyled-jltvsP iRzhNT"
    >
      <div
        className="TabStyled__TabStyled-kKgjJZ jFBgwR"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabTextStyled__TabTextStyled-jbYAge cybLXN"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled__TabStyled-kKgjJZ jFBgwR"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabTextStyled__TabTextStyled-jbYAge cybLXN"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled__TabStyled-kKgjJZ jfjewJ"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabTextStyled__TabTextStyled-jbYAge cybLXN"
            >
              Test
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop selected set after render 2`] = `
<div
  className="TabsWrapperStyled__TabsWrapperStyled-kxWKwf kQdeyK"
>
  <div
    className="TabsContentWrapperStyled__TabsContentWrapperStyled-fmMkZg HDXly"
  >
    <div
      className="TabsListStyled__TabsListStyled-jltvsP iRzhNT"
    >
      <div
        className="TabStyled__TabStyled-kKgjJZ jFBgwR"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabTextStyled__TabTextStyled-jbYAge cybLXN"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled__TabStyled-kKgjJZ jfjewJ"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabTextStyled__TabTextStyled-jbYAge cybLXN"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled__TabStyled-kKgjJZ jFBgwR"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabTextStyled__TabTextStyled-jbYAge cybLXN"
            >
              Test
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop text is empty 1`] = `
<div
  className="TabsWrapperStyled__TabsWrapperStyled-kxWKwf kQdeyK"
>
  <div
    className="TabsContentWrapperStyled__TabsContentWrapperStyled-fmMkZg HDXly"
  >
    <div
      className="TabsListStyled__TabsListStyled-jltvsP iRzhNT"
    >
      <div
        className="TabStyled__TabStyled-kKgjJZ jfjewJ"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly with default props 1`] = `
<div
  className="TabsWrapperStyled__TabsWrapperStyled-kxWKwf kQdeyK"
>
  <div
    className="TabsContentWrapperStyled__TabsContentWrapperStyled-fmMkZg HDXly"
  >
    <div
      className="TabsListStyled__TabsListStyled-jltvsP iRzhNT"
    />
  </div>
</div>
`;
